--- a/.htaccess
+++ b/.htaccess
@@ -267,4 +267,4 @@ RewriteRule ^.* - [F,L]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ app.php/$1 [QSA,L]
+RewriteRule ^(.*)$ app.php/$1 [L]
