--- a/.htaccess
+++ b/.htaccess
@@ -265,5 +265,6 @@ RewriteCond %{HTTP_USER_AGENT} ^Zeus [OR]
 RewriteCond %{HTTP_USER_AGENT} ^Zyborg
 RewriteRule ^.* - [F,L]
 
-RewriteRule ^index.php$ - [L]
-RewriteRule ^(.*)$ index.php?p=$1 [L,QSA]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^api/xml/(.*) /api/xml/index.php/$1 [QSA,L]
