--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,6 @@
 # Fu RewriteRule
 RewriteEngine on
 RewriteBase /
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^api/xml/(.*) /api/xml/index.php/$1 [QSA,L]
