--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,4 @@ RewriteEngine on
 RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^api/xml/(.*) /api/xml/index.php/$1 [QSA,L]
+RewriteRule ^(.*)$ /index.php/$1 [QSA,L]
