--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@
     RewriteBase /
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)$ index.php/$1 [L]
+    RewriteRule ^(.*)$ app.php/$1 [QSA,NC,L]
 </IfModule>
 
 <IfModule !mod_rewrite.c>
