--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,34 @@
+# Fu RewriteRule
+
+allow from all
+
+<FilesMatch "\.(ico|pdf|flv|jpg|JPG|jpeg|png|PNG|gif|js|css|swf)(\.gz)?$">
+Header set Expires "Thu, 1 Apr 2014 20:00:00 GMT"
+Header unset ETag
+FileETag None
+</FilesMatch>
+
+# 1 year cache
+<filesMatch "\.(ico|pdf|flv)$">
+Header set Cache-Control "max-age=29030400, public"
+</filesMatch>
+# 1 week cache
+<filesMatch "\.(jpg|JPG|jpeg|png|PNG|gif|swf)$">
+Header set Cache-Control "max-age=604800, public"
+</filesMatch>
+# 2 days cache
+<filesMatch "\.(xml|txt|css|js)$">
+Header set Cache-Control "max-age=172800, proxy-revalidate"
+</filesMatch>
+
+<FilesMatch "\.(engine|inc|info|install|make|module|profile|test|po|sh|.*sql|theme|bak|.*sql~|bak~|php~|tpl(\.php)?|xtmpl)$|^(\..*|Entries.*|Repository|Root|Tag|Template)$">
+Order allow,deny
+</FilesMatch>
+
+<Files ~ "^\.(htaccess|htpasswd)$">
+deny from all
+</Files>
+
 <IfModule mod_rewrite.c>
     RewriteEngine On
     RewriteBase /
