--- a/.htaccess
+++ b/.htaccess
@@ -278,6 +278,8 @@ deny from all
     ErrorDocument 404 /error/404
     ErrorDocument 301 /error/301
 
+    RedirectMatch permanent ^/fu-class/.*$ /error/page-not-found
+
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ app.php/$1 [QSA,NC,L]
