--- a/.htaccess
+++ b/.htaccess
@@ -282,7 +282,7 @@ deny from all
 
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)$ app.php/$1 [QSA,NC,L]
+    RewriteRule ^(.*)$ index.php/$1 [QSA,NC,L]
 </IfModule>
 
 <IfModule !mod_rewrite.c>
