--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,7 @@
 # Fuku RewriteRule
 
 allow from all
-
-Require all granted
-Require not ip 188.143.232.41
+deny from 188.143.232.41
 
 <FilesMatch "\.(ico|pdf|flv|jpg|JPG|jpeg|png|PNG|gif|js|css|swf)(\.gz)?$">
   <ifModule mod_headers.c>
