--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,11 @@ allow from all
 
 <RequireAll>
     Require all granted
+    Require not ip 188.143.232.34
+    Require not ip 188.143.232.37
     Require not ip 188.143.232.41
+    Require not ip 188.143.232.62
+    Require not ip 188.143.232.72
 </RequireAll>
 
 <FilesMatch "\.(ico|pdf|flv|jpg|JPG|jpeg|png|PNG|gif|js|css|swf)(\.gz)?$">
