--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,7 @@ allow from all
 <RequireAll>
     Require all granted
     Require not ip 188.143.232.16
+    Require not ip 188.143.232.26
     Require not ip 188.143.232.34
     Require not ip 188.143.232.37
     Require not ip 188.143.232.41
