--- a/.htaccess
+++ b/.htaccess
@@ -10,6 +10,7 @@ allow from all
     Require not ip 188.143.232.34
     Require not ip 188.143.232.35
     Require not ip 188.143.232.37
+    Require not ip 188.143.232.40
     Require not ip 188.143.232.41
     Require not ip 188.143.232.62
     Require not ip 188.143.232.72
