--- a/.htaccess
+++ b/.htaccess
@@ -5,8 +5,11 @@ allow from all
 <RequireAll>
     Require all granted
     Require not ip 188.143.232.0/24
-    #Require not ip 188.143.232.16
-    #Require not ip 188.143.232.21
+    Require not ip 46.161.9.32
+    Require not ip 39.179.90.194
+    Require not ip 189.125.149.16
+    Require not ip 41.227.219.131
+    Require not ip 58.8.207.164
     #Require not ip 188.143.232.26
     #Require not ip 188.143.232.34
     #Require not ip 188.143.232.35
